redo margin placement

--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -63,13 +63,11 @@ header {
   margin-bottom: 0;
   padding-bottom: 0;
 }
-
 .hero {
   display: flex;
   justify-content: center;
   margin: 8px auto 36px;
 }
-
 
 .hero img {
   display: block;
@@ -83,9 +81,11 @@ header {
   transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
+/* <-- Make sure this starts AFTER the .hero img block is closed */
 .card.tone {
   margin-top: 0px; /* closes the space between image and card */
 }
+
 
 
 
