--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -73,7 +73,7 @@ header {
   display: block;
   width: 100%;
   max-width: 900px;
-  aspect-ratio: 3 / 2; /* ensures the landscape shape */
+  aspect-ratio: 3 / 2; 
   border-radius: 20px;
   object-fit: cover;
   margin: 12px auto 5px;
@@ -81,14 +81,10 @@ header {
   transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
-/* <-- Make sure this starts AFTER the .hero img block is closed */
+
 .card.tone {
-  margin-top: 0px; /* closes the space between image and card */
+  margin-top: 0px; 
 }
-
-
-
-
 
 .hero img:hover {
   transform: scale(1.02);
