hero and card tone edits

--- a/day1/day1-recipe.html
+++ b/day1/day1-recipe.html
@@ -66,7 +66,7 @@ header {
 .hero {
   display: flex;
   justify-content: center;
-  margin: 8px auto 36px;
+  margin: 8px auto 8px;
 }
 
 .hero img {
@@ -83,7 +83,7 @@ header {
 
 
 .card.tone {
-  margin-top: 0px; 
+  margin-top: 0; 
 }
 
 .hero img:hover {
