--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -91,7 +91,7 @@
     </header>
 
     <figure class="hero">
-      <img src="journal-moment" alt="Woman journaling">
+      <img src="journal-moment.jpg" alt="Woman journaling">
     </figure>
 
     <section class="card">
