--- a/day2/day2-recipe.html
+++ b/day2/day2-recipe.html
@@ -43,8 +43,8 @@
   justify-content: center;
   align-items: center;
   margin: 8px auto 32px;
-  max-width: 900px;         /* matches the Cheat Sheet */
-  aspect-ratio: 16 / 9;     /* slightly wider than 5/3 */
+  max-width: 900px;       /* same as text width */
+  aspect-ratio: 16 / 9;   /* shallow, cinematic feel */
   overflow: hidden;
   border-radius: 20px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
@@ -61,6 +61,7 @@
   transform: scale(1.02);
   box-shadow: 0 10px 26px rgba(0,0,0,.08);
 }
+
 
 
   /* Cards */
