--- a/day2/day2-recipe.html
+++ b/day2/day2-recipe.html
@@ -38,31 +38,19 @@
   header h1{margin:0;font-size:clamp(22px,4vw,34px);line-height:1.18;font-weight:700;}
   header .sub{margin-top:6px;opacity:.95;font-size:1.05rem;font-weight:500;}
 
-  .hero {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 8px auto 32px;
-  max-width: 900px;       /* same as text width */
-  aspect-ratio: 16 / 9;   /* shallow, cinematic feel */
-  overflow: hidden;
-  border-radius: 20px;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
-}
-
-.hero img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transition: transform 0.35s ease, box-shadow 0.35s ease;
-}
-
-.hero img:hover {
-  transform: scale(1.02);
-  box-shadow: 0 10px 26px rgba(0,0,0,.08);
-}
-
-
+  /* Hero section */
+  .hero{
+    display:flex;justify-content:center;
+    max-width:720px;margin:8px auto 32px;
+    border-radius:20px;overflow:hidden;
+    box-shadow:0 8px 16px rgba(0,0,0,0.08);
+    aspect-ratio:5/3;
+  }
+  .hero img{
+    width:100%;height:100%;object-fit:cover;
+    transition:transform .35s ease,box-shadow .35s ease;
+  }
+  .hero img:hover{transform:scale(1.02);box-shadow:0 10px 26px rgba(0,0,0,.08);}
 
   /* Cards */
   .card{background:var(--card);border-radius:var(--radius);
