--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -27,11 +27,29 @@
   header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15;font-weight:700;}
   .sub{opacity:.95;margin-top:6px;font-size:1.05rem;font-weight:500;}
 
-  .hero{
-    margin-top:14px;border-radius:var(--radius);
-    overflow:hidden;box-shadow:0 8px 22px rgba(0,0,0,.06);
-  }
-  .hero img{display:block;width:100%;height:auto;}
+  .hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px auto 32px;
+  max-width: 900px;       /* same as text width */
+  aspect-ratio: 16 / 9;   /* shallow, cinematic feel */
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
+}
+
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
+}
+
+.hero img:hover {
+  transform: scale(1.02);
+  box-shadow: 0 10px 26px rgba(0,0,0,.08);
+}
 
   .card{background:var(--card);border-radius:var(--radius);
     padding:18px;margin-top:16px;
