--- a/day5/day5-cheatsheet.html
+++ b/day5/day5-cheatsheet.html
@@ -21,16 +21,29 @@
   .sub{opacity:.95;margin-top:6px}
 
 .hero {
-  margin-top:14px;
-  border-radius:var(--radius);
-  overflow:hidden;
-  box-shadow:0 8px 22px rgba(0,0,0,.06);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px auto 32px;
+  max-width: 900px;       /* same as text width */
+  aspect-ratio: 16 / 9;   /* shallow, cinematic feel */
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
 }
+
 .hero img {
-  display:block;
-  width:100%;
-  height:auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
+
+.hero img:hover {
+  transform: scale(1.02);
+  box-shadow: 0 10px 26px rgba(0,0,0,.08);
+}
+
 
   .card{background:var(--card);border-radius:var(--radius);padding:18px;margin-top:16px;
     box-shadow:0 8px 22px rgba(0,0,0,.06);border:1px solid var(--line)}
