--- a/day3/day3-recipe.html
+++ b/day3/day3-recipe.html
@@ -42,19 +42,28 @@
   }
 
   .hero {
-    display:flex;justify-content:center;max-width:720px;
-    margin:8px auto 32px;border-radius:20px;
-    box-shadow:0 8px 16px rgba(0,0,0,0.08);
-    overflow:hidden;aspect-ratio:5/3;
-  }
-  .hero img {
-    width:100%;height:100%;object-fit:cover;
-    transition:transform 0.35s ease,box-shadow 0.35s ease;
-  }
-  .hero img:hover {
-    transform:scale(1.02);
-    box-shadow:0 10px 26px rgba(0,0,0,.08);
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px auto 32px;
+  max-width: 900px;       /* same as text width */
+  aspect-ratio: 16 / 9;   /* shallow, cinematic feel */
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
+}
+
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
+}
+
+.hero img:hover {
+  transform: scale(1.02);
+  box-shadow: 0 10px 26px rgba(0,0,0,.08);
+}
 
   .card{background:var(--card);border-radius:var(--radius);
     padding:20px;margin-top:18px;box-shadow:0 8px 22px rgba(0,0,0,.06);
