--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -148,7 +148,7 @@
     <div class="cta-row">
       <a class="btn" href="day1-video.html">Watch Today’s Video</a>
       <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 2 Cheat Sheet →</a>
-      <a class="btn ghost" href="#">🍽 Recipe of the Day</a>
+      <a class="btn ghost" href="day1-recipe.html">🍽 Recipe of the Day</a>
       <a class="btn ghost" href="#">✒️ Journal Page</a>
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
       <a class="btn ghost" id="print-pdf">Download PDF</a>
