--- a/day4/day4-cheatsheet.html
+++ b/day4/day4-cheatsheet.html
@@ -150,7 +150,7 @@
     <div class="cta-row">
       <a class="btn" href="day4-video.html">Watch Today’s Video</a>
       <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 5 Cheat Sheet →</a>
-      <a class="btn ghost" href="#">🍽 Recipe of the Day</a>
+      <a class="btn ghost" href="day4-recipe.html">🍽 Recipe of the Day</a>
       <a class="btn ghost" href="#">✒️ Journal Page</a>
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
       <a class="btn ghost" id="print-pdf">Download PDF</a>
