back to cheat sheet button

--- a/day4/day4-recipe.html
+++ b/day4/day4-recipe.html
@@ -94,6 +94,11 @@
       <p>This phase thrives on slower nourishment — warm meals, soft lighting, early evenings. Treat this as your body’s cue to restore rather than push. The nutrients here (magnesium, B-vitamins, plant protein) help your nervous system down-shift into repair mode.</p>
     </section>
 
+    <div class="cta-row">
+    <a class="btn" href="day3-cheatsheet.html">← Back to Cheat Sheet</a>
+    <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+  </div>
+
     <footer>
       You’re not slowing down — you’re syncing with your body’s wisdom. <strong>This warmth is data you can feel.</strong>
     </footer>
