--- a/day4/day4-recipe.html
+++ b/day4/day4-recipe.html
@@ -27,20 +27,19 @@
   .card h2{margin:0 0 10px;font-size:1.2rem;display:flex;gap:.5rem;align-items:center}
   ul{margin:8px 0 0 20px}
   li{margin:.25rem 0}
+  .cta-row{display:flex;flex-wrap:wrap;gap:12px;justify-content:center;margin-top:24px}
+  .btn{display:inline-block;background:var(--brand);color:#fff;text-decoration:none;
+    padding:12px 18px;border-radius:999px;font-weight:700;cursor:pointer;transition:all 0.25s ease}
+  .btn:hover{transform:translateY(-2px);box-shadow:0 6px 14px rgba(252,139,115,.35)}
+  .btn.secondary{background:#2D2D2D}
+  .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
+  .btn.ghost:hover{background:#FC8B73;color:#fff}
   footer{text-align:center;font-size:1.1rem;color:#0D0D0E;margin-top:48px;margin-bottom:60px;
     font-weight:600;line-height:1.7;animation:slideUpFade 1.4s ease-out 0.3s forwards;opacity:0;}
   footer strong{color:#FC8B73;}
   @keyframes slideUpFade {
     0%{opacity:0;transform:translateY(30px);}
     100%{opacity:1;transform:translateY(0);}
-  }
-  @media print {
-    @page {size:A4;margin:18mm;}
-    .cta-row, .muted, .brand img {display:none !important;}
-    section.card{box-shadow:none !important;border:1px solid #e8e8e8 !important;border-radius:8px !important;}
-    header{background:#fff !important;color:#000 !important;border:1px solid #e8e8e8 !important;}
-    a{color:#000 !important;text-decoration:underline !important;}
-    html,body{background:#fff !important;}
   }
 </style>
 </head>
@@ -95,9 +94,9 @@
     </section>
 
     <div class="cta-row">
-    <a class="btn" href="day3-cheatsheet.html">← Back to Cheat Sheet</a>
-    <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-  </div>
+      <a class="btn ghost" href="day4-cheatsheet.html">← Back to Cheat Sheet</a>
+      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+    </div>
 
     <footer>
       You’re not slowing down — you’re syncing with your body’s wisdom. <strong>This warmth is data you can feel.</strong>
@@ -105,4 +104,5 @@
   </div>
 </body>
 </html>
+
 
