--- a/day3/day3-recipe.html
+++ b/day3/day3-recipe.html
@@ -77,7 +77,10 @@
     padding:12px 22px;border-radius:999px;font-weight:700;cursor:pointer;
     text-align:center;transition:all .25s ease;}
   .btn:hover{transform:translateY(-1px);opacity:.9;}
-  .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand);}
+  .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
+.btn.primary{background:var(--brand);color:#fff;border:none}
+.btn.primary:hover{transform:translateY(-2px);box-shadow:0 6px 14px rgba(252,139,115,.35)}
+
 
   footer{text-align:center;font-size:1.05rem;color:#0D0D0E;
     margin-top:52px;margin-bottom:60px;font-weight:600;line-height:1.7;}
@@ -155,9 +158,10 @@
   </section>
 
   <div class="cta-row">
-    <a class="btn" href="day3-cheatsheet.html">← Back to Cheat Sheet</a>
-    <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-  </div>
+  <a class="btn primary" href="day3-cheatsheet.html">← Back to Cheat Sheet</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+</div>
+
 
   <footer>
     💬 Your body knows balance — it just needs you to listen.  
