--- a/day4/day4-recipe.html
+++ b/day4/day4-recipe.html
@@ -33,6 +33,8 @@
   .btn:hover{transform:translateY(-2px);box-shadow:0 6px 14px rgba(252,139,115,.35)}
   .btn.secondary{background:#2D2D2D}
   .btn.ghost{background:#fff;color:var(--brand);border:2px solid var(--brand)}
+.btn.primary{background:var(--brand);color:#fff;border:none}
+.btn.primary:hover{transform:translateY(-2px);box-shadow:0 6px 14px rgba(252,139,115,.35)}
   .btn.ghost:hover{background:#FC8B73;color:#fff}
   footer{text-align:center;font-size:1.1rem;color:#0D0D0E;margin-top:48px;margin-bottom:60px;
     font-weight:600;line-height:1.7;animation:slideUpFade 1.4s ease-out 0.3s forwards;opacity:0;}
@@ -94,9 +96,10 @@
     </section>
 
     <div class="cta-row">
-      <a class="btn ghost" href="day4-cheatsheet.html">← Back to Cheat Sheet</a>
-      <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
-    </div>
+  <a class="btn primary" href="day4-cheatsheet.html">← Back to Cheat Sheet</a>
+  <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
+</div>
+
 
     <footer>
       You’re not slowing down — you’re syncing with your body’s wisdom. <strong>This warmth is data you can feel.</strong>
