--- a/day4/day4-recipe.html
+++ b/day4/day4-recipe.html
@@ -19,9 +19,30 @@
   header{background:var(--brand);color:#fff;border-radius:var(--radius);padding:22px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.10)}
   header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
   .sub{opacity:.95;margin-top:6px}
-  .hero{margin-top:14px;border-radius:var(--radius);overflow:hidden;box-shadow:0 8px 22px rgba(0,0,0,.06)}
-  .hero img{display:block;width:100%;height:auto;transition:transform .3s ease, box-shadow .3s ease}
-  .hero img:hover{transform:scale(1.02);box-shadow:0 10px 26px rgba(0,0,0,.08)}
+  
+  .hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 8px auto 32px;
+  max-width: 900px;       /* same as text width */
+  aspect-ratio: 16 / 9;   /* shallow, cinematic feel */
+  overflow: hidden;
+  border-radius: 20px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.08);
+}
+
+.hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.35s ease, box-shadow 0.35s ease;
+}
+
+.hero img:hover {
+  transform: scale(1.02);
+  box-shadow: 0 10px 26px rgba(0,0,0,.08);
+}
   .card{background:var(--card);border-radius:var(--radius);padding:18px;margin-top:16px;
     box-shadow:0 8px 22px rgba(0,0,0,.06);border:1px solid var(--line)}
   .card h2{margin:0 0 10px;font-size:1.2rem;display:flex;gap:.5rem;align-items:center}
