--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -159,7 +159,7 @@
       <a class="btn" href="day2-video.html">Watch Today’s Video</a>
       <a class="btn ghost" href="day2-recipe.html">🍽 Recipe of the Day →</a>
       <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 3 Cheat Sheet →</a>
-      <a class="btn ghost" href="#">✒️ Journal Page</a>
+      <a class="btn ghost" href="https://raw.artificialmomentum.com/day2/day2-journal">✒️ Journal Page</a>
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
       <a class="btn ghost" id="print-pdf">Download PDF</a>
     </div>
