--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -149,7 +149,7 @@
       <a class="btn" href="day1-video.html">Watch Today’s Video</a>
       <a class="btn locked" href="#" onclick="return false;" title="Unlocks tomorrow">Day 2 Cheat Sheet →</a>
       <a class="btn ghost" href="day1-recipe.html">🍽 Recipe of the Day</a>
-      <a class="btn ghost" href="#">✒️ Journal Page</a>
+      <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day1-journal">✒️ Journal Page</a>
       <a class="btn ghost" href="mailto:rtr@artificialmomentum.com">Ask a Question</a>
       <a class="btn ghost" id="print-pdf">Download PDF</a>
     </div>
