Image amend day 3

--- a/day3/day3-cheatsheet.html
+++ b/day3/day3-cheatsheet.html
@@ -95,7 +95,7 @@
     </header>
 
     <figure class="hero">
-      <img src="healthy-bowl.jpg" alt="Two nourishing bowls with protein, greens, and grains">
+      <img src="workout-prep.jpg" alt="workout-prep">
     </figure>
 
     <section class="card">
