Share box dimensions update

--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -92,12 +92,12 @@
   </section>
 
   <!-- Share / Private Options -->
-<div class="card tone" style="text-align:center; margin-top:28px; padding:20px;">
-  <p style="margin-bottom:18px; font-size:0.98rem; opacity:0.85;">
+<div class="card tone" style="text-align:center; margin-top:14px; margin-bottom:6px; padding:16px 20px;">
+  <p style="margin-bottom:10px; font-size:0.95rem; opacity:0.85;">
     When you’re finished reflecting, you can <strong>share your thoughts</strong> or <strong>keep them just for you.</strong>
   </p>
-
 </div>
+
 
   <div class="cta-row">
     <button class="btn" id="shareBtn">📤 Share with Diana</button>
