Logo Bunny edit

--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -100,7 +100,7 @@
   <div class="wrap">
 
     <div class="brand">
-      <img src="logo.png" alt="Artificial Momentum logo">
+      <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
     </div>
 
     <header>
