--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -92,7 +92,7 @@
 
 <body>
   <div class="wrap">
-    <div class="brand"><img src="logo.png" alt="Artificial Momentum logo"></div>
+    <div class="brand"><img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo"></div>
 
     <header>
       <h1>Day 1 — You’re Not Broken — You’re Just Out of Rhythm</h1>
