--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -56,7 +56,7 @@
 <body>
 <div class="wrap">
 
-  <div class="brand"><img src="logo.png" alt="Artificial Momentum logo"></div>
+  <div class="brand"><img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo"></div>
 
   <header>
     <h1>Day 1 — Journal Reflection</h1>
