--- a/day2/day2-journal.html
+++ b/day2/day2-journal.html
@@ -59,7 +59,8 @@
 <body>
 <div class="wrap">
 
-  <div class="brand"><img src="logo.png" alt="Artificial Momentum logo"></div>
+  <div class="brand"><img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
+</div>
 
   <header>
     <h1>Day 2 — Journal Reflection</h1>
