--- a/day4/day4-journal.html
+++ b/day4/day4-journal.html
@@ -58,7 +58,8 @@
 <body>
 <div class="wrap">
 
-  <div class="brand"><img src="logo.png" alt="Artificial Momentum logo"></div>
+  <div class="brand"><img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
+</div>
 
   <header>
     <h1>Day 4 — Journal Reflection</h1>
