--- a/day5/day5-recipe.html
+++ b/day5/day5-recipe.html
@@ -68,7 +68,7 @@
   <div class="wrap">
 
     <div class="brand">
-      <img src="logo.png" alt="Artificial Momentum logo">
+      <img src="https://cdn.artificialmomentum.com/logo.png" alt="Artificial Momentum logo">
     </div>
 
     <header>
