--- a/day3/day3-journal.html
+++ b/day3/day3-journal.html
@@ -125,7 +125,7 @@
       🗂️ Keep Private Copy
     </button>
 
-    <a class="btn ghost" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
+    <a class="btn ghost" href="https://raw.artificialmomentum.com/day3/day3-cheatsheet">← Back to Cheat Sheet</a>
   </div>
 </div>
 
