--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -107,7 +107,15 @@
 
   <div class="cta-row" style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
     <a 
-      href="mailto:rtr@artificialmomentum.com?subject=Raw%20to%20Reset%20Journal%20Reflection&body=Hi%20Diana%2C%0D%0A%0D%0AHere%20are%20my%20reflections%20from%20today's%20journal%3A%0D%0A%0D%0A%5BWrite%20your%20thoughts%20here%5D%0D%0A%0D%0AWith%20love%2C%0D%0A%5BYour%20Name%5D"
+<form action="https://formspree.io/f/xzzkrlyp" method="POST" style="width:100%; text-align:center;">
+  <input type="hidden" name="_redirect" value="https://raw.artificialmomentum.com/thank-you.html">
+  <input type="hidden" name="page" value="Day 4 Journal">
+  <button type="submit"
+    style="background:var(--card); color:var(--brand); padding:12px 22px; border-radius:var(--radius);
+    font-weight:600; box-shadow:0 2px 4px rgba(0,0,0,.08); border:none; cursor:pointer;">
+    Share with Diana
+  </button>
+</form>
       class="btn"
       style="background:var(--brand); color:var(--card); padding:12px 22px; border-radius:var(--radius); text-decoration:none; font-weight:600; box-shadow:0 2px 4px rgba(0,0,0,0.08);">
       💌 Share with Diana
