--- a/day2/day2-journal.html
+++ b/day2/day2-journal.html
@@ -121,19 +121,14 @@
     Share with Diana
   </button>
 </form>
-      class="btn"
-      style="background:var(--brand); color:var(--card); padding:12px 22px; border-radius:var(--radius); text-decoration:none; font-weight:600; box-shadow:0 2px 4px rgba(0,0,0,0.08);">
-      💌 Share with Diana
-    </a>
-
-    <button 
+       
       onclick="window.print()" 
       class="btn ghost"
       style="padding:12px 22px; border-radius:var(--radius); font-weight:600; cursor:pointer;">
       🗂️ Keep Private Copy
     </button>
 
-    <a class="btn ghost" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
+    <a class="btn ghost" href="https://raw.artificialmomentum.com/day2/day2-cheatsheet.html">← Back to Cheat Sheet</a>
   </div>
 </div>
 
