--- a/day3/day3-journal.html
+++ b/day3/day3-journal.html
@@ -111,24 +111,27 @@
   </p>
 
   <div class="cta-row" style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
-    <a 
-<form action="https://formspree.io/f/xzzkrlyp" method="POST" style="width:100%; text-align:center;">
-  <input type="hidden" name="_redirect" value="https://raw.artificialmomentum.com/thank-you.html">
-  <input type="hidden" name="page" value="Day 4 Journal">
-  <button type="submit"
-    style="background:var(--card); color:var(--brand); padding:12px 22px; border-radius:var(--radius);
-    font-weight:600; box-shadow:0 2px 4px rgba(0,0,0,.08); border:none; cursor:pointer;">
-    Share with Diana
-  </button>
-</form>
-      onclick="window.print()" 
-      class="btn ghost"
-      style="padding:12px 22px; border-radius:var(--radius); font-weight:600; cursor:pointer;">
-      🗂️ Keep Private Copy
-    </button>
+  
+  <form action="https://formspree.io/f/xzzkrlyp" method="POST" style="width:100%; text-align:center;">
+    <input type="hidden" name="_redirect" value="https://raw.artificialmomentum.com/thank-you.html">
+    <input type="hidden" name="page" value="Day 4 Journal">
 
-    <a class="btn ghost" href="https://raw.artificialmomentum.com/day3/day3-cheatsheet">← Back to Cheat Sheet</a>
-  </div>
+    <button type="submit"
+      class="btn"
+      style="background:var(--brand); color:var(--card); padding:12px 22px; border-radius:var(--radius);
+      font-weight:600; box-shadow:0 2px 4px rgba(0,0,0,.08); border:none; cursor:pointer;">
+      Share with Diana
+    </button>
+  </form>
+
+  <button onclick="window.print()" class="btn ghost"
+    style="padding:12px 22px; border-radius:var(--radius); font-weight:600; cursor:pointer;">
+    🗂️ Keep Private Copy
+  </button>
+
+  <a class="btn ghost" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
+</div>
+
 </div>
 
 
