cheat sheet link updates

--- a/day4/day4-journal.html
+++ b/day4/day4-journal.html
@@ -131,7 +131,7 @@
     🗂️ Keep Private Copy
   </button>
 
-  <a class="btn ghost" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day4/day4-cheatsheet.html">← Back to Cheat Sheet</a>
 </div>
 
 </div>
