--- a/day5/day5-journal.html
+++ b/day5/day5-journal.html
@@ -139,7 +139,7 @@
     🗂️ Keep Private Copy
   </button>
 
-  <a class="btn ghost" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day5/day5-cheatsheet.html">← Back to Cheat Sheet</a>
 </div>
 
 </div>
