--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -124,7 +124,7 @@
     🗂️ Keep Private Copy
   </button>
 
-  <a class="btn ghost" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day1/day1-cheatsheet.html">← Back to Cheat Sheet</a>
 </div>
 
 </div>
