--- a/day2/day2-journal.html
+++ b/day2/day2-journal.html
@@ -129,7 +129,7 @@
     🗂️ Keep Private Copy
   </button>
 
-  <a class="btn ghost" href="day1-cheatsheet.html">← Back to Cheat Sheet</a>
+  <a class="btn ghost" href="https://raw.artificialmomentum.com/day2/day2-cheatsheet.html">← Back to Cheat Sheet</a>
 </div>
 
 </div>
