--- a/day1/day1-journal.html
+++ b/day1/day1-journal.html
@@ -108,7 +108,7 @@
   <div class="cta-row" style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap;">
   
   <form action="https://formspree.io/f/xzzkrlyp" method="POST" style="width:100%; text-align:center;">
-    <input type="hidden" name="_redirect" value="https://raw.artificialmomentum.com/thank-you.html">
+<input type="hidden" name="_next" value="https://raw.artificialmomentum.com/thank-you.html">
     <input type="hidden" name="page" value="Day 4 Journal">
 
     <button type="submit"
