Day 1 Cheat Sheet Sub heading edit

--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -96,7 +96,7 @@
 
     <header>
       <h1>Day 1 — You’re Not Broken — You’re Just Out of Rhythm</h1>
-      <div class="sub">Quick wins + signals decoded</div>
+      <div class="sub">Small shifts, big signals decoded</div>
     </header>
 
     <figure class="hero">
