undo style delete

--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -33,6 +33,7 @@
   </style>
 </head>
 
+<style>
   :root{
     --brand:#FC8B73; --ink:#0D0D0E; --card:#FFFFFF; --muted:#666;
     --soft:#FFF7F4; --line:#ffd7cc; --radius:18px;
