--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -43,9 +43,41 @@
   .wrap{max-width:900px;margin:28px auto 64px;padding:0 18px}
   .brand{display:flex;justify-content:center;align-items:center;margin-bottom:12px}
   .brand img{width:clamp(88px,9vw,140px);height:auto;display:block;filter:drop-shadow(0 4px 14px rgba(0,0,0,.08))}
-  header{background:var(--brand);color:#fff;border-radius:var(--radius);padding:22px;text-align:center;box-shadow:0 10px 30px rgba(0,0,0,.10)}
-  header h1{margin:0;font-size:clamp(22px,4.2vw,36px);line-height:1.15}
-  .sub{opacity:.95;margin-top:6px}
+  .brand img{width:clamp(88px,9vw,140px);height:auto;display:block;filter:drop-shadow(0 4px 14px rgba(0,0,0,.08))}
+
+/* ⬇️ paste this here */
+header {
+  background: linear-gradient(165deg, #FD8369 0%, #FEB299 100%);
+  color: #fff;
+  border-radius: var(--radius);
+  padding: 26px 20px 28px;
+  text-align: center;
+  box-shadow: 0 8px 24px rgba(0,0,0,.08);
+  margin-bottom: 28px;
+}
+header h1 {
+  margin: 0;
+  font-size: clamp(22px, 4.2vw, 36px);
+  line-height: 1.15;
+  font-weight: 700;
+}
+.sub {
+  opacity: .95;
+  margin-top: 6px;
+  font-size: 1.05rem;
+  font-weight: 500;
+}
+
+/* ⬇️ keep your card styles as they are next */
+.card {
+  background: var(--card);
+  border-radius: var(--radius);
+  padding: 18px;
+  margin-top: 16px;
+  box-shadow: 0 8px 22px rgba(0,0,0,.06);
+  border: 1px solid var(--line);
+}
+
   .card{background:var(--card);border-radius:var(--radius);padding:18px;margin-top:16px;
     box-shadow:0 8px 22px rgba(0,0,0,.06);border:1px solid var(--line)}
   .card h2{margin:0 0 10px;font-size:1.2rem;display:flex;gap:.5rem;align-items:center}
