--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -42,7 +42,7 @@
 
     /* ---------- Header ---------- */
     header {
-      background:linear-gradient(165deg,#FD8369 0%,#FEB299 100%);
+      background: var(--brand);
       color:#fff; border-radius:var(--radius);
       padding:26px 20px 28px; text-align:center;
       box-shadow:0 8px 24px rgba(0,0,0,.08);
