remove gradient from header

--- a/day2/day2-cheatsheet.html
+++ b/day2/day2-cheatsheet.html
@@ -19,7 +19,7 @@
     filter:drop-shadow(0 4px 14px rgba(0,0,0,.08))}
   
   header{
-    background:linear-gradient(165deg,#FD8369 0%,#FEB299 100%);
+    background: var(--brand);
     color:#fff;border-radius:var(--radius);padding:26px 20px 28px;
     text-align:center;box-shadow:0 8px 24px rgba(0,0,0,.08);
     margin-bottom:28px;
