--- a/day1/day1-cheatsheet.html
+++ b/day1/day1-cheatsheet.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="light dark">
-  <title>Day X Cheat Sheet — Raw to Reset</title>
+  <title>Day 1 Cheat Sheet — Raw to Reset</title>
 
   <style>
     /* ---------- Global Rhythm + Dark Mode ---------- */
